# TalkSmith

./: .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  BLOCKER_RESOLUTION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  DOC_DRIFT_REPORT.md  Dockerfile.cuda  FINAL_PR_SUMMARY.md  LICENSE  Makefile  README.md  README_GOOGLE_DOCS.md  TESTING.md  TEST_ENGINEER_REPORT.md  TEST_SUMMARY.md  docker-compose.yml  environment.yml  issues.json  launcher_multigpu.py  pr_checks.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  TESTING_QUICK_REFERENCE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: discord-commit-notification.yml  discord-release-notification.yml  tests.yml
benchmarks/: README.md  metrics.py  run_benchmarks.ps1  run_benchmarks.sh
benchmarks/test_audio/: .gitkeep  ground_truth.json
cli/: __init__.py  main.py
config/: __init__.py  google_docs.ini.example  settings.ini  settings.py
data/samples/: test-segments.json
docs/: PLAN_GENERATION.md  PREPROCESSING.md  benchmarking.md  configuration.md  consent_template.md  diarization.md  docker-setup.md  google-drive-sync.md  google_docs_setup.md  prereqs.md
examples/: README.md  example_plan.md  google_docs_example.py  sample_plan.md  sample_plan_output.md  sample_segments.json
output/: example_plan.md
pipeline/: README_PLAN.md  __init__.py  diarization_base.py  diarize_alt.py  diarize_whisperx.py  exporters.py  google_docs_integration.py  gpu_utils.py  logger.py  outline_from_segments.py  plan_from_transcript.py  postprocess_speakers.py  preprocess.py  redact_pii.py  transcribe_fw.py
pipeline/diarization/: __init__.py  alternative.py  base.py  cli.py  whisperx.py
pipeline/multigpu/: README.md  __init__.py  gpu_detector.py  launcher_orchestrator.py  load_balancer.py  process_spawner.py  resource_allocator.py
scripts/: batch_transcribe.ps1  batch_transcribe.py  batch_transcribe.sh  check_ffmpeg.py  check_gpu.py  make_env.ps1  make_env.sh  prefetch_models.ps1  prefetch_models.sh  sync_to_drive.ps1  sync_to_drive.sh
tests/: README.md  __init__.py  conftest.py  test_config.py  test_config_edge_cases.py  test_config_imports.py  test_config_stress.py  test_plan_from_transcript.py
tests/integration/: __init__.py  test_export_integration.py  test_full_pipeline.py  test_logger_integration.py  test_preprocessing_integration.py
tests/unit/: __init__.py  test_check_ffmpeg.py  test_check_gpu.py  test_diarization.py  test_error_handling.py  test_export_formats_comprehensive.py  test_exports.py  test_logger.py  test_outline_from_segments.py  test_performance.py  test_postprocess_speakers.py  test_preprocess.py  test_redact_pii.py  test_transcribe.py
tests/utils/: __init__.py
