# TalkSmith - Project Configuration
# Modern Python packaging with PEP 517/518 and tool configurations

# ============================================================================
# Build System (PEP 517/518)
# ============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project Metadata (PEP 621)
# ============================================================================
[project]
name = "talksmith"
version = "0.1.0"
description = "Local, free, GPU-accelerated transcription and diarization pipeline for long-form multi-speaker audio"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Dakota Irsik", email = "dakota@example.com"}
]
maintainers = [
    {name = "Dakota Irsik", email = "dakota@example.com"}
]
keywords = [
    "transcription",
    "diarization",
    "whisper",
    "speech-to-text",
    "audio-processing",
    "gpu-accelerated",
    "speaker-diarization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies
dependencies = [
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Alternative diarization (token-free)
    "resemblyzer>=0.1.1",
    "scikit-learn>=1.3.0",
    "librosa>=0.10.0",
    # LLM providers for plan generation (optional but included in base)
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    # Google Docs integration (optional but included in base)
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]

# Optional dependencies for different use cases
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    # Code Quality
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.0",
    # Development Tools
    "ipython>=8.14.0",
    # Audio Processing (for tests)
    "soundfile>=0.12.1",
    # Benchmarking
    "pandas>=2.0.0",
    # Pre-commit hooks
    "pre-commit>=3.0.0",
]

llm = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

google-docs = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
]

# All optional dependencies combined
all = [
    "talksmith[dev,llm,google-docs]",
]

# CLI entry points
[project.scripts]
talksmith = "cli.main:main"

# Project URLs
[project.urls]
Homepage = "https://github.com/DakotaIrsik/TalkSmith"
Repository = "https://github.com/DakotaIrsik/TalkSmith"
"Bug Tracker" = "https://github.com/DakotaIrsik/TalkSmith/issues"
Documentation = "https://github.com/DakotaIrsik/TalkSmith#readme"
Changelog = "https://github.com/DakotaIrsik/TalkSmith/blob/main/CHANGELOG.md"

# ============================================================================
# Setuptools Configuration
# ============================================================================
[tool.setuptools]
packages = ["cli", "config", "pipeline"]

[tool.setuptools.package-data]
config = ["*.ini"]

# ============================================================================
# Tool Configurations
# ============================================================================

# ============================================================================
# Black (code formatter)
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | \.cache
)/
'''

# ============================================================================
# isort (import sorting)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", ".cache", "build", "dist"]

# ============================================================================
# mypy (type checking)
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.redact_pii"
ignore_errors = true

[[tool.mypy.overrides]]
module = "config.settings"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.gpu_utils"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.google_docs_integration"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.diarize_whisperx"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.diarize_alt"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.plan_from_transcript"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.logger"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.transcribe_fw"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.preprocess"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.postprocess_speakers"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.outline_from_segments"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pipeline.exporters"
ignore_errors = true

[[tool.mypy.overrides]]
module = "cli.main"
ignore_errors = true

# ============================================================================
# Bandit (security linter)
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests/", "benchmarks/", ".venv/", "venv/", ".cache/", "scripts/"]
skips = [
    "B101",  # Skip assert_used (we use asserts in tests)
    "B404",  # Skip subprocess import warnings (false positive for system commands)
    "B603",  # Skip subprocess without shell warnings (false positive)
    "B607",  # Skip partial executable path (false positive for system commands)
    "B311",  # Skip random in test/demo code
    "B306",  # Skip mktemp (used in preprocessing pipeline)
]

# ============================================================================
# pytest (testing framework)
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=pipeline",
    "--cov=cli",
    "--cov=config",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that may take a long time",
]

# ============================================================================
# Coverage.py
# ============================================================================
[tool.coverage.run]
source = ["pipeline", "cli", "config"]
omit = [
    "tests/*",
    "*/tests/*",
    "scripts/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
